# interproscan

./: .gitignore  .travis.yml  Dockerfile  README  README.md
.github/workflows/: build-test.yml
core/: .gitignore  pom.xml
core/batch/: CHANGES.txt  README.txt  pom.xml  proactive-maven-install.sh
core/batch-old/: pom.xml
core/batch-proactive/: CHANGES.txt  README.txt  pom.xml  proactive-maven-install.sh
core/business/: pom.xml
core/cli/: dist.xml  pom.xml
core/condensed-view/: pom.xml
core/generic-jpa-dao/: README.txt  pom.xml
core/io/: CHANGES.txt  README.txt  pom.xml
core/jms-implementation/: EBI-LSF.sh  assembly.xml  pom.xml  runmaster.sh
core/jms-implementation/support-mini-x86-32/src/prints/fingerprintscan/3597/: AUTHORS  ChangeLog  FingerPrint.cc  FrequencyTable.cc  FrequencyTable.h  Makefile  Makefile.am  Makefile.in  NEWS  PathFinder.cc  PathFinder.h  Score.cc  Score.h  Sequence_database.cc  Sequence_database.h  SubstitutionMatrix.cc  SubstitutionMatrix.h  acinclude.m4  aclocal.m4  config.status  configure  configure.in  fingerPRINTScan  mystring.cc  mystring.h
core/jms-implementation/support-mini-x86-32/src/prints/fingerprintscan/3597/.deps/: FingerPrint.Po  FrequencyTable.Po  PathFinder.Po  Score.Po  Sequence_database.Po  SubstitutionMatrix.Po  mystring.Po
core/management/: pom.xml
core/model/: CHANGES.txt  LICENSE.txt  README.txt  pom.xml
core/parser/: CHANGES.txt  README.txt  pom.xml
core/persistence/: README.txt  pom.xml
core/precalcmatches/: pom.xml
core/search/: pom.xml
core/util/: README.txt  (+1 more)
scripts/: build.sh
(+4570 files in other folders)
